--- a/android/local.properties
+++ b/android/local.properties
@@ -1,6 +1,6 @@
-sdk.dir=C:/Users/ESES/AppData/Local/Android/Sdk
+sdk.dir=C:\\Users\\ESES\\AppData\\Local\\Android\\Sdk
 flutter.sdk=D:\\Flutter-Project\\SDK\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.3
 flutter.versionCode=3
 flutter.minSdkVersion=20
